--- a/data-availability/celestia/light-node/docker-compose.yaml
+++ b/data-availability/celestia/light-node/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
         NODE_TYPE: light
         RPC_ENDPOINT: rpc-mocha.pops.one
         CELESTIA_OTEL_URL: otel.celestia.tools:4318
-    container_name: zkvote-node
+    container_name: zkvote-node-celestia
     restart: always
     ports:
       - 10101:10101
