segment tree impl and cleanup

--- a/Contracts/tsconfig.json
+++ b/Contracts/tsconfig.json
@@ -19,6 +19,7 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "useDefineForClassFields": false,
+    "resolveJsonModule": true
   },
-  "include": ["./src"],
+  "include": ["./src"]
 }
