--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "electron": "^28.1.3",
     "electron-builder": "^24.13.3",
     "electronmon": "^2.0.3",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "@polkadot/api": "^10.11.3",
+    "@polkadot/util-crypto": "^12.6.2"
   },
   "dependencies": {
+    "avail-js-sdk": "^0.2.15",
     "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
     "docker-cli-js": "^2.10.0",
