--- a/Contracts/package.json
+++ b/Contracts/package.json
@@ -42,6 +42,10 @@
     "node": ">=18.14.0"
   },
   "dependencies": {
-    "mina-signer": "^3.0.7"
+    "@inquirer/prompts": "^5.5.0",
+    "commander": "^12.1.0",
+    "dotenv": "^16.4.5",
+    "mina-signer": "^3.0.7",
+    "mongoose": "^8.6.2"
   }
 }
