--- a/package.json
+++ b/package.json
@@ -29,21 +29,19 @@
     "electron": "^28.1.3",
     "electron-builder": "^24.13.3",
     "electronmon": "^2.0.3",
-    "jest": "^29.7.0",
-    "@polkadot/api": "^10.11.3",
-    "@polkadot/util-crypto": "^12.6.2"
+    "jest": "^29.7.0"
   },
   "dependencies": {
     "avail-js-sdk": "^0.2.15",
-    "body-parser": "^1.20.2",
     "child_process": "^1.0.2",
     "docker-cli-js": "^2.10.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
-    "net": "^1.0.2",
     "os": "^0.1.2",
     "path": "^0.12.7",
+    "@polkadot/api": "^10.11.3",
+    "@polkadot/util-crypto": "^12.6.2",
     "serve-favicon": "^2.5.0",
     "update-electron-app": "^3.0.0",
     "validator": "^13.12.0"
