chore: Dynamic Docker container initialization for DA Layers - syncing optimized

--- a/da-layers/avail/light-node/Dockerfile
+++ b/da-layers/avail/light-node/Dockerfile
@@ -2,11 +2,13 @@ FROM ubuntu:22.04
 
 ENV DEBIAN_FRONTEND=noninteractive
 
+ARG APP_ID
 ARG CHAIN_ID
 ARG DAEMON_HOME
 ARG DAEMON_NAME
 ARG DAEMON_VERSION
 ARG DEFAULT_RPC_PORT
+ARG SYNC_START_BLOCK
 
 WORKDIR /root
 
@@ -14,19 +16,23 @@ RUN apt update && \
     apt install -y curl jq git build-essential wget pkg-config libssl-dev make gcc && \
     rm -rf /var/lib/apt/lists/*
 
+ENV APP_ID=${APP_ID}
 ENV CHAIN_ID=${CHAIN_ID}
 ENV DAEMON_HOME=${DAEMON_HOME}
 ENV DAEMON_NAME=${DAEMON_NAME}
 ENV DAEMON_VERSION=${DAEMON_VERSION}
 ENV DEFAULT_RPC_PORT=${DEFAULT_RPC_PORT}
+ENV SYNC_START_BLOCK=${SYNC_START_BLOCK}
 ENV CONFIG_FILE=${DAEMON_HOME}/${CHAIN_ID}/config/config.toml
 ENV IDENTITY_FILE=${DAEMON_HOME}/${CHAIN_ID}/identity/identity.toml
 
-RUN echo "export CHAIN_ID=${CHAIN_ID}" >> $HOME/.bash_profile && \
+RUN echo "export APP_ID=${APP_ID}" >> $HOME/.bash_profile && \
+    echo "export CHAIN_ID=${CHAIN_ID}" >> $HOME/.bash_profile && \
     echo "export DAEMON_HOME=${DAEMON_HOME}" >> $HOME/.bash_profile && \
     echo "export DAEMON_NAME=${DAEMON_NAME}" >> $HOME/.bash_profile && \
     echo "export DAEMON_VERSION=${DAEMON_VERSION}" >> $HOME/.bash_profile && \
     echo "export DEFAULT_RPC_PORT=${DEFAULT_RPC_PORT}" >> $HOME/.bash_profile && \
+    echo "export SYNC_START_BLOCK=${SYNC_START_BLOCK}" >> $HOME/.bash_profile && \
     echo "export CONFIG_FILE=${CONFIG_FILE}" >> $HOME/.bash_profile && \
     echo "export IDENTITY_FILE=${IDENTITY_FILE}" >> $HOME/.bash_profile
 
@@ -44,9 +50,8 @@ RUN echo "bootstraps = ['/dns/bootnode.1.lightclient.turing.avail.so/tcp/37000/p
     echo "genesis_hash = 'd3d2f3a3495dc597434a99d7d449ebad6616db45e4e4f178f31cc6fa14378b70'" >> ${CONFIG_FILE} && \
     echo "http_server_host = '0.0.0.0'" >> ${CONFIG_FILE} && \
     echo "http_server_port = ${DEFAULT_RPC_PORT}" >> ${CONFIG_FILE} && \
-    echo "sync_start_block = 755200" >> ${CONFIG_FILE} && \
-    echo "sync_finality_enable = true" >> ${CONFIG_FILE} && \
-    echo "app_id = 101" >> ${CONFIG_FILE}
+    echo "sync_start_block = ${SYNC_START_BLOCK}" >> ${CONFIG_FILE} && \
+    echo "app_id = ${APP_ID}" >> ${CONFIG_FILE}
 
 RUN wget -q https://github.com/availproject/avail-light/releases/download/${DAEMON_VERSION}/avail-light-linux-amd64.tar.gz
 RUN tar -xzf avail-light-linux-amd64.tar.gz
