--- a/da-layers/avail/light-node/docker-compose.yaml
+++ b/da-layers/avail/light-node/docker-compose.yaml
@@ -4,11 +4,13 @@ services:
       context: .
       args:
         UBUNTU_VERSION: 22.04
+        APP_ID: APP_ID_PLACEHOLDER
         CHAIN_ID: turing
         DAEMON_HOME: /root/.avail
         DAEMON_NAME: avail-light
         DAEMON_VERSION: v1.11.0-rc3
         DEFAULT_RPC_PORT: 10103
+        SYNC_START_BLOCK: SYNC_START_BLOCK_PLACEHOLDER
     platform: linux/amd64
     container_name: zkvote-node-avail
     restart: always
