--- a/Contracts/.gitignore
+++ b/Contracts/.gitignore
@@ -16,6 +16,10 @@ voteproofs.json
 votersRoot.json
 voteAggregatorVerificationKey.json
 voteProofsRandom.json
+voteproofsEcdsa256.json
+votersRootEcdsa256.json
+voteAggregatorVerificationKeyEcdsa256.json
+voteProofsRandomEcdsa256.json
 env.json
 cachedProofsDb
 
