--- a/Contracts/package.json
+++ b/Contracts/package.json
@@ -35,9 +35,6 @@
     "ts-jest": "^28.0.8",
     "typescript": "^5.1"
   },
-  "peerDependencies": {
-    "o1js": "^1.7.0"
-  },
   "engines": {
     "node": ">=18.14.0"
   },
@@ -45,7 +42,9 @@
     "@inquirer/prompts": "^5.5.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
+    "ethers": "^5.7.2",
     "level": "^8.0.1",
-    "mina-signer": "^3.0.7"
+    "mina-signer": "^3.0.7",
+    "o1js": "^1.8.0"
   }
 }
