--- a/da-layers/celestia/light-node/docker-compose.yaml
+++ b/da-layers/celestia/light-node/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
         PROJECT_FOLDER: celestia-node
         CHAIN_ID: mocha
         DAEMON_NAME: celestia
+        DAEMON_HOME: /root/.celestia-light-mocha-4
         DAEMON_VERSION: v0.16.0
         DEFAULT_KEY_NAME: my_celes_key
         DEFAULT_RPC_PORT: 10102
@@ -15,6 +16,7 @@ services:
         RPC_ENDPOINT: rpc-mocha.pops.one
         CELESTIA_OTEL_URL: otel.celestia.tools:4318
         TRUSTED_BLOCK_HASH: TRUSTED_BLOCK_HASH_PLACEHOLDER
+        TRUSTED_BLOCK_HEIGHT: TRUSTED_BLOCK_HEIGHT_PLACEHOLDER
     container_name: zkvote-node-celestia
     restart: always
     ports:
