make get election data

--- a/cli/package.json
+++ b/cli/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "commander": "^12.1.0",
     "level": "^8.0.1",
+    "node-fetch": "^3.3.2",
     "winston": "^3.14.2"
   }
 }
