--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "zkvot",
+  "name": "zkvote",
   "version": "0.1.0",
-  "description": "World's first fully live anonymous voting application!",
-  "author": "node101",
+  "description": "",
+  "author": "",
   "license": "Apache-2.0",
   "keywords": [
     "mina-zkapp",
