--- a/cli/package.json
+++ b/cli/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "zkvot-cli",
-  "version": "1.0.0",
-  "main": "app.js",
-  "type": "module",
-  "scripts": {
-    "start": "node --disable-warning=ExperimentalWarning app.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "commander": "^12.1.0",
-    "docker-cli-js": "^2.10.0",
-    "level": "^8.0.1",
-    "o1js": "^1.8.0",
-    "validator": "^13.12.0",
-    "winston": "^3.14.2"
-  },
-  "engines": {
-    "node": ">=18.14.0"
-  },
-  "engineStrict": true
+    "name": "zkvot-cli",
+    "version": "1.0.0",
+    "main": "app.js",
+    "type": "module",
+    "scripts": {
+        "start": "node --disable-warning=ExperimentalWarning app.js"
+    },
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "dependencies": {
+        "commander": "^12.1.0",
+        "docker-cli-js": "^2.10.0",
+        "level": "^8.0.1",
+        "o1js": "^1.8.0",
+        "validator": "^13.12.0",
+        "winston": "^3.14.2"
+    },
+    "devDependencies": {
+        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-typescript": "^7.16.0"
+    },
+    "engines": {
+        "node": ">=18.14.0"
+    },
+    "engineStrict": true
 }
