--- a/cli/package.json
+++ b/cli/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "build": "tsc",
-        "start": "node --disable-warning=ExperimentalWarning app.js"
+        "start": "node --disable-warning=ExperimentalWarning build/app.js"
     },
     "author": "",
     "license": "ISC",
