--- a/app/package.json
+++ b/app/package.json
@@ -24,11 +24,11 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "react-toastify": "^10.0.5"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "18.3.8",
+    "@types/react-dom": "^18.3.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.6.2"
