--- a/app/.github/workflows/build.yml
+++ b/app/.github/workflows/build.yml
@@ -29,14 +29,8 @@ jobs:
             mkdir -p ~/private_keys/
             echo '${{ secrets.APPLE_API_KEY }}' > ~/private_keys/AuthKey_${{ secrets.APPLE_API_KEY_ID }}.p8
 
-      - name: Navigate to the app directory
-        run: cd app
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build app
-        run: npm run build
+      - name: Install and build the app
+        run: cd app && npm ci && npm run build
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1.6.0
