--- a/app/package.json
+++ b/app/package.json
@@ -2,15 +2,13 @@
   "name": "zkvotenode",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "node server.js"
+    "start": "electron electron/server.js"
   },
   "dependencies": {
-    "@cosmjs/proto-signing": "^0.32.4",
-    "@cosmjs/stargate": "^0.32.4",
-    "@cosmos-kit/core": "^2.13.1",
     "@heroicons/react": "^1.0.6",
     "@polkadot/api": "^13.2.1",
     "@polkadot/extension-dapp": "^0.53.1",
@@ -19,17 +17,20 @@
     "avail-js-sdk": "^0.2.18",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
+    "contracts": "*",
     "copy-to-clipboard": "^3.3.3",
     "express": "^4.19.2",
     "framer-motion": "^11.8.0",
-    "next": "14.2.7",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "update-electron-app": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "18.3.8",
     "@types/react-dom": "^18.3.1",
+    "electron": "^33.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.6.2"
