--- a/app/package.json
+++ b/app/package.json
@@ -1,12 +1,43 @@
 {
   "name": "zkvotenode",
+  "description": "World's first fully live anonymous voting application!",
+  "author": "node101",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node server.js",
-    "build": "next build",
+    "dev": "next dev",
+    "build:next": "next build",
+    "build:electron": "electron-builder",
     "start": "electron electron/server.js"
+  },
+  "build": {
+    "appId": "io.zkvot.app",
+    "files": [
+      "build/**/*",
+      "public/**/*",
+      "electron/**/*",
+      "contracts/**/*",
+      "node_modules/**/*",
+      "package.json",
+      "package-lock.json"
+    ],
+    "mac": {
+      "hardenedRuntime": true,
+      "extendInfo": {
+        "LSUIElement": 1
+      },
+      "notarize": true
+    },
+    "linux": {
+      "target": [
+        "AppImage"
+      ]
+    },
+    "publish": {
+      "provider": "github",
+      "releaseType": "release"
+    }
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
@@ -19,7 +50,7 @@
     "buffer": "^6.0.3",
     "contracts": "*",
     "copy-to-clipboard": "^3.3.3",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
     "framer-motion": "^11.8.0",
     "next": "^14.2.15",
     "react": "^18",
@@ -28,9 +59,11 @@
     "update-electron-app": "^3.0.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/react": "18.3.8",
     "@types/react-dom": "^18.3.1",
     "electron": "^33.0.1",
+    "electron-builder": "^25.1.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.6.2"
