--- a/app/package.json
+++ b/app/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "zkvotenode",
+  "name": "zkvot",
   "description": "World's first fully live anonymous voting application!",
   "author": "node101",
   "version": "0.1.0",
+  "repository": "github:node101-io/zkvot",
   "private": true,
   "type": "module",
+  "main": "electron/server.js",
   "scripts": {
     "dev": "next dev",
     "build:next": "next build",
     "build:electron": "electron-builder",
+    "build": "npm run build:next && npm run build:electron",
     "start": "electron electron/server.js"
   },
   "build": {
     "appId": "io.zkvot.app",
+    "asar": false,
     "files": [
       "build/**/*",
-      "public/**/*",
       "electron/**/*",
-      "contracts/**/*",
       "node_modules/**/*",
+      ".next/**/*",
       "package.json",
       "package-lock.json"
     ],
@@ -62,7 +65,7 @@
     "@types/express": "^5.0.0",
     "@types/react": "18.3.8",
     "@types/react-dom": "^18.3.1",
-    "electron": "^33.0.1",
+    "electron": "33.0.1",
     "electron-builder": "^25.1.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
