fix .next issue

--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,12 @@
   "build": {
     "appId": "io.zkvot.app",
     "asar": false,
+    "extraResources": [
+      {
+        "from": "./.next",
+        "to": "./"
+      }
+    ],
     "files": [
       "build/**/*",
       "electron/**/*",
