--- a/cli/package.json
+++ b/cli/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.7.0",
     "eslint-plugin-o1js": "^0.4.0",
     "level": "^8.0.1",
+    "level-read-stream": "^1.1.0",
     "o1js": "^1.8.0",
     "typescript": "^5.1",
     "winston": "^3.14.2"
@@ -29,7 +30,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-typescript": "^7.16.0",
-    "@types/async": "^3.2.24"
+    "@types/async": "^3.2.24",
+    "@types/readable-stream": "^4.0.15"
   },
   "engines": {
     "node": ">=18.14.0"
