--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -19,6 +19,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
+      "contracts": ["../contracts"]
     },
     "plugins": [
       {
@@ -26,6 +27,7 @@
       }
     ]
   },
+  "references": [{ "path": "../contracts" }],
   "include": [
     "next-env.d.ts",
     ".next/types/**/*.ts",
@@ -35,6 +37,7 @@
     "**/*.jsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ]
 }
