--- a/app/package.json
+++ b/app/package.json
@@ -56,12 +56,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "update-electron-app": "^3.0.0"
+    "update-electron-app": "^3.0.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/react": "18.3.8",
     "@types/react-dom": "^18.3.1",
+    "@types/uuid": "^10.0.0",
     "electron": "^33.0.1",
     "electron-builder": "^25.1.8",
     "postcss": "^8",
