--- a/app/package.json
+++ b/app/package.json
@@ -48,6 +48,7 @@
     }
   },
   "dependencies": {
+    "contracts": "file:../contracts",
     "o1js": "^1.9.0",
     "@heroicons/react": "^1.0.6",
     "@polkadot/api": "^13.2.1",
