--- a/backend/package.json
+++ b/backend/package.json
@@ -6,19 +6,24 @@
   "main": "build/app.js",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon build/app.js"
+    "dev": "nodemon build/app.js",
+    "start": "node build/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "contracts": "file:../contracts",
     "avail-js-sdk": "^0.2.18",
     "body-parser": "^1.20.3",
     "cluster": "^0.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.2",
-    "nodemon": "^3.1.7",
     "o1js": "^1.9.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "nodemon": "^3.1.7"
   }
 }
