fix backend and app o1js

--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "build:electron": "tsc --project electron",
     "build": "npm run build:next && npm run build:electron",
     "dist": "npm run build && electron-builder",
-    "start": "electron electron/build/server.js"
+    "start": "electron electron/build/server.js",
+    "postinstall": "npm update contracts"
   },
   "build": {
     "appId": "io.zkvot.app",
@@ -48,8 +49,6 @@
     }
   },
   "dependencies": {
-    "contracts": "file:../contracts",
-    "o1js": "^1.9.0",
     "@heroicons/react": "^1.0.6",
     "@polkadot/api": "^13.2.1",
     "@polkadot/extension-dapp": "^0.53.1",
@@ -58,10 +57,12 @@
     "avail-js-sdk": "^0.2.18",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
+    "contracts": "file:../contracts/contracts-0.1.0.tgz",
     "copy-to-clipboard": "^3.3.3",
     "express": "^4.21.1",
     "framer-motion": "^11.8.0",
     "next": "^14.2.15",
+    "o1js": "^1.9.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
