--- a/backend/package.json
+++ b/backend/package.json
@@ -6,16 +6,16 @@
   "main": "build/app.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon build/app.js",
-    "start": "node build/app.js"
+    "start": "node build/app.js",
+    "postinstall": "npm update contracts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "contracts": "file:../contracts",
     "avail-js-sdk": "^0.2.18",
     "body-parser": "^1.20.3",
     "cluster": "^0.7.7",
+    "contracts": "file:../contracts/contracts-0.1.0.tgz",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.2",
@@ -23,7 +23,6 @@
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "nodemon": "^3.1.7"
+    "@types/express": "^5.0.0"
   }
 }
