--- a/contracts/package.json
+++ b/contracts/package.json
@@ -14,8 +14,8 @@
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "buildw": "tsc --watch",
+    "build": "tsc && npm pack",
+    "buildw": "tsc --watch && npm pack",
     "coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "format": "prettier --write --ignore-unknown **/*",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
