--- a/app/package.json
+++ b/app/package.json
@@ -66,10 +66,12 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "sharp": "^0.33.5",
     "update-electron-app": "^3.0.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/react": "18.3.8",
     "@types/react-dom": "^18.3.1",
