--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -18,8 +18,7 @@
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "contracts": ["../contracts"]
+      "@/*": ["./*"]
     },
     "plugins": [
       {
@@ -27,7 +26,6 @@
       }
     ]
   },
-  "references": [{ "path": "../contracts" }],
   "include": [
     "next-env.d.ts",
     ".next/types/**/*.ts",
@@ -37,7 +35,6 @@
     "**/*.jsx"
   ],
   "exclude": [
-    "node_modules",
-    "dist"
+    "node_modules"
   ]
 }
