--- a/app/package.json
+++ b/app/package.json
@@ -6,47 +6,11 @@
   "repository": "github:node101-io/zkvot",
   "private": true,
   "type": "module",
-  "main": "electron/build/server.js",
   "scripts": {
-    "dev": "electron electron/server.js",
-    "build:next": "next build",
-    "build:electron": "tsc --project electron",
-    "build": "npm run build:next && npm run build:electron",
-    "dist": "npm run build && electron-builder",
-    "start": "electron electron/build/server.js",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "postinstall": "npm update contracts"
-  },
-  "build": {
-    "appId": "io.zkvot.app",
-    "extraResources": [
-      {
-        "from": "./.next",
-        "to": "./"
-      }
-    ],
-    "files": [
-      "build/**/*",
-      "electron/**/*",
-      ".next/**/*",
-      "package.json",
-      "package-lock.json"
-    ],
-    "mac": {
-      "hardenedRuntime": true,
-      "extendInfo": {
-        "LSUIElement": 1
-      },
-      "notarize": true
-    },
-    "linux": {
-      "target": [
-        "AppImage"
-      ]
-    },
-    "publish": {
-      "provider": "github",
-      "releaseType": "release"
-    }
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
@@ -67,7 +31,6 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "sharp": "^0.33.5",
-    "update-electron-app": "^3.0.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -76,8 +39,6 @@
     "@types/react": "18.3.8",
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "^10.0.0",
-    "electron": "33.0.1",
-    "electron-builder": "^25.1.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "5.6.2"
