--- a/app/package.json
+++ b/app/package.json
@@ -1,46 +1,33 @@
 {
-  "name": "zkvot",
-  "description": "World's first fully live anonymous voting application!",
-  "author": "node101",
+  "name": "ui",
   "version": "0.1.0",
-  "repository": "github:node101-io/zkvot",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --no-lint",
     "start": "next start",
-    "postinstall": "npm update contracts"
+    "lint": "next lint",
+    "ts-watch": "tsc --noEmit --incremental --watch"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
-    "@polkadot/api": "^13.2.1",
-    "@polkadot/extension-dapp": "^0.53.1",
-    "@polkadot/types": "^13.2.1",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@polkadot/extension-dapp": "^0.54.1",
     "avail-js-sdk": "^0.2.18",
-    "axios": "^1.7.7",
-    "buffer": "^6.0.3",
-    "contracts": "file:../contracts/contracts-0.1.0.tgz",
+    "comlink": "^4.4.1",
     "copy-to-clipboard": "^3.3.3",
-    "express": "^4.21.1",
-    "framer-motion": "^11.8.0",
-    "next": "^14.2.15",
-    "o1js": "^1.9.0",
+    "framer-motion": "^11.11.9",
+    "next": "14.2.12",
+    "o1js": "^1.*",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "sharp": "^0.33.5",
-    "uuid": "^10.0.0"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/react": "18.3.8",
-    "@types/react-dom": "^18.3.1",
-    "@types/uuid": "^10.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.6.2"
-  }
+    "typescript": "^5"
+  },
+  "type": "module"
 }
