--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,8 @@
     "o1js": "^1.*",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
