--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "comlink": "^4.4.1",
     "contracts": "file:../contracts/contracts-0.1.0.tgz",
     "copy-to-clipboard": "^3.3.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
     "next": "14.2.12",
     "o1js": "^1.*",
