--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -10,7 +10,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "allowJs": true,
@@ -20,7 +20,8 @@
     "allowSyntheticDefaultImports": true,
     "useDefineForClassFields": false,
     "resolveJsonModule": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "composite": true
   },
   "include": ["./**/*.ts"]
 }
