--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -1,26 +1,9 @@
 {
+  "extends": "@repo/config/typescript/tsconfig.cli.json",
   "compilerOptions": {
-    "target": "es2020",
-    "module": "es2022",
-    "lib": ["dom", "esnext"],
-    "outDir": "build",
+    "outDir": "./build",
     "rootDir": "./src",
-    "strict": true,
-    "strictPropertyInitialization": false,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
-    "moduleResolution": "Bundler",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "allowJs": true,
-    "declaration": true,
-    "sourceMap": true,
-    "noFallthroughCasesInSwitch": true,
-    "allowSyntheticDefaultImports": true,
-    "useDefineForClassFields": false,
-    "resolveJsonModule": true,
     "baseUrl": "."
   },
-  "include": ["./**/*.ts"]
+  "include": ["./src"],
 }
