--- a/packages/config/typescript/tsconfig.backend.json
+++ b/packages/config/typescript/tsconfig.backend.json
@@ -1,16 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "es2022",
+    "target": "ESNext",
+    "module": "NodeNext",
     "lib": ["dom", "esnext"],
-    "outDir": "./build",
-    "rootDir": "./src",
     "strict": true,
     "strictPropertyInitialization": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "moduleResolution": "NodeNext",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "allowJs": true,
@@ -19,7 +17,6 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "useDefineForClassFields": false,
-    "baseUrl": "."
-  },
-  "include": ["./**/*.ts"]
+    "resolveJsonModule": true,
+  }
 }
