--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -30,7 +30,8 @@
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@repo/config": "*"
   },
   "type": "module"
 }
