--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -5,8 +5,8 @@
   "author": "node101",
   "license": "Apache-2.0",
   "type": "module",
-  "main": "build/src/index.js",
-  "types": "build/src/index.d.ts",
+  "main": "build/index.js",
+  "types": "src/index.ts",
   "scripts": {
     "build": "tsc",
     "buildw": "tsc --watch",
@@ -42,6 +42,9 @@
     "o1js": "^1.9.0"
   },
   "exports": {
-    ".": "./src/index.ts"
+    ".": {
+      "types": "./src/index.ts",
+      "default": "./build/index.js"
+    }
   }
 }
