--- a/apps/webapp/tsconfig.json
+++ b/apps/webapp/tsconfig.json
@@ -1,3 +1,17 @@
 {
-  "extends": "@repo/config/typescript/tsconfig.webapp.json"
+  "extends": "@repo/config/typescript/tsconfig.webapp.json",
+  "compilerOptions": {
+    "paths": {
+      "@/*": ["./*"]
+    },
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
