--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -11,7 +11,6 @@
     "build": "tsc",
     "buildw": "tsc --watch",
     "coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "format": "prettier --write --ignore-unknown **/*",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "testw": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "lint": "npx eslint src/* --fix"
@@ -25,9 +24,9 @@
     "eslint": "^8.7.0",
     "eslint-plugin-o1js": "^0.4.0",
     "jest": "^28.1.3",
-    "prettier": "^2.3.2",
     "ts-jest": "^28.0.8",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "@repo/config": "*"
   },
   "engines": {
     "node": ">=18.14.0"
