--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -2,12 +2,11 @@
   "name": "zkvot-webapp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build --no-lint",
-    "start": "next start",
-    "lint": "next lint",
-    "ts-watch": "tsc --noEmit --incremental --watch"
+    "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
@@ -34,6 +33,5 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3"
-  },
-  "type": "module"
+  }
 }
