--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "build": "rm -rf ../webapp/.next/cache && node installBinary.js && cargo tauri build"
+    "build": "cargo tauri build"
   },
   "devDependencies": {
     "next": "14.2.12",
