--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -14,6 +14,7 @@
     "@polkadot/extension-dapp": "^0.56.1",
     "@polkadot/util": "^13.2.2",
     "avail-js-sdk": "^0.2.18",
+    "canvas-confetti": "^1.9.3",
     "comlink": "^4.4.1",
     "copy-to-clipboard": "^3.3.3",
     "date-fns": "^4.1.0",
