--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -19,8 +19,9 @@
     "copy-to-clipboard": "^3.3.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.9",
+    "js-sha256": "^0.11.0",
     "next": "14.2.12",
-    "o1js": "^1.*",
+    "o1js": "https://pkg.pr.new/o1-labs/o1js@fc16ce3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
