--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,7 +21,7 @@
     "mongoose": "^8.7.2",
     "o1js": "^1.9.0",
     "path": "^0.12.7",
-    "zkvot-contracts": "*"
+    "zkvot-core": "*"
   },
   "devDependencies": {
     "@repo/config": "*",
