--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -26,7 +26,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "uuid": "^10.0.0",
-    "zkvot-contracts": "*"
+    "zkvot-core": "*"
   },
   "devDependencies": {
     "@repo/config": "*",
