--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -32,6 +32,7 @@
     "@repo/config": "*",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3"
