--- a/apps/webapp/tsconfig.json
+++ b/apps/webapp/tsconfig.json
@@ -10,7 +10,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/public", "src/public/types.d.ts"
   ],
   "exclude": [
     "node_modules"
