--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,6 +11,7 @@
   "author": "node101",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.701.0",
     "@polkadot/api": "^14.2.2",
     "@polkadot/util": "^13.2.2",
     "avail-js-sdk": "^0.2.18",
@@ -21,6 +22,7 @@
     "mongoose": "^8.7.2",
     "o1js": "^1.9.0",
     "path": "^0.12.7",
+    "sharp": "^0.33.5",
     "zkvot-core": "*"
   },
   "devDependencies": {
