fix some build errors

--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@repo/config": "*",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
