--- a/packages/config/typescript/tsconfig.contracts.json
+++ b/packages/config/typescript/tsconfig.contracts.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2022",
+    "target": "es2020",
     "module": "es2022",
     "lib": ["dom", "esnext"],
     "strict": true,
@@ -16,6 +16,6 @@
     "sourceMap": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
-    "useDefineForClassFields": false,
+    "useDefineForClassFields": false
   }
 }
