--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -5,14 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build --no-lint",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "@polkadot/api": "^14.2.2",
-    "@polkadot/extension-dapp": "^0.56.1",
-    "@polkadot/util": "^13.2.2",
+    "@polkadot/api": "^14.3.1",
+    "@polkadot/extension-dapp": "^0.56.2",
+    "@polkadot/util": "^13.2.3",
     "avail-js-sdk": "^0.2.18",
     "canvas-confetti": "^1.9.3",
     "comlink": "^4.4.1",
