fix storage layer types and refactor

--- a/apps/backend/.env.dev
+++ b/apps/backend/.env.dev
@@ -1,5 +1,7 @@
-MONGODB_URI='string'
-AWS_BUCKET_NAME='string'
-AWS_BUCKET_REGION='string'
-AWS_ACCESS_KEY_ID='string'
+AVAIL_LIGHT_CLIENT_SEED_PHRASE='string'
+AVAIL_LIGHT_CLIENT_RPC_ENDPOINT='string' # optional
+AWS_BUCKET_NAME='string' # optional
+AWS_BUCKET_REGION='string' # optional
 AWS_SECRET_ACCESS_KEY='string'
+AWS_ACCESS_KEY_ID='string'
+MONGODB_URI='string'
