--- a/apps/cli/src/da-layers/avail/light-node/docker-compose.yaml
+++ b/apps/cli/src/da-layers/avail/light-node/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
         CHAIN_ID: turing
         DAEMON_HOME: /root/.avail
         DAEMON_NAME: avail-light
-        DAEMON_VERSION: avail-light-client-v1.12.0-rc2
+        DAEMON_VERSION: avail-light-client-v1.12.0
         DEFAULT_RPC_PORT: 10103
         SYNC_START_BLOCK: SYNC_START_BLOCK_PLACEHOLDER
     platform: linux/amd64
