--- a/apps/backend/aggregator/package.json
+++ b/apps/backend/aggregator/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.2",
     "o1js": "^2",
+    "path": "^0.12.7",
     "sharp": "^0.33.5",
     "zkvot-core": "*"
   },
