Begin fixing the Celestia interactions

--- a/apps/backend/.env.dev
+++ b/apps/backend/.env.dev
@@ -4,4 +4,8 @@ AWS_BUCKET_NAME='string' # optional
 AWS_BUCKET_REGION='string' # optional
 AWS_SECRET_ACCESS_KEY='string'
 AWS_ACCESS_KEY_ID='string'
+CELESTIA_TESTNET_AUTH_TOKEN=''
+CELESTIA_MAINNET_AUTH_TOKEN=''
+CELESTIA_TESTNET_RPC_ENDPOINT=''
+CELESTIA_MAINNET_RPC_ENDPOINT=''
 MONGODB_URI='string'
