--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@namada/sdk": "^0.15.0",
     "@polkadot/api": "^14.2.3",
     "@polkadot/extension-dapp": "^0.56.2",
     "@polkadot/util": "^12.6.2",
@@ -22,7 +23,7 @@
     "framer-motion": "^11.11.9",
     "js-sha256": "^0.11.0",
     "next": "14.2.20",
-    "o1js": "https://pkg.pr.new/o1-labs/o1js@784f02d",
+    "o1js": "^2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
